<resources>
    <string name="app_name">Binna Applicationn</string>
    <string name="logo_image">logo</string>
    <string name="lets_start_btn">Lets Start </string>
    <string name="welcome_binna_text_view">Welcome to Our Application</string>
    <string name="login_text">Login</string>
    <string name="signup_text">SigUp</string>
    <string name="enjoy_your_time_text">Enjoy Your Time</string>
    <string name="hint_email"> Enter your Email .... </string>
    <string name="email_text_view"> Email  </string>
    <string name="email_edit_view">Mohamed255@hotmail.com </string>
    <string name="password_edit_view"> 4521353166 </string>
    <string name="password_text_view"> Password </string>
    <string name="hint_password"> Enter your Password .... </string>
    <string name="login_text_nav"> Login </string>
    <string name="signup_text_nav"> SignUp </string>
    <string name="back_arrow"> back arrow </string>
    <string name="first_name_text"> First Name </string>
    <string name="last_name_text"> Last Name </string>
    <string name="hint_email_signup"> Enter Your Email </string>
    <string name="hint_password_signup"> Enter Your Password </string>
    <string name="hint_first_name"> Enter Your First Name </string>
    <string name="hint_last_name"> Enter Your Last Name </string>
    <string name="confirm_password_text"> Confirm Password </string>
    <string name="hint_confirm_password"> Confirm Password </string>
    <string name="choose_gendre"> Choose Gendre </string>
    <string name="radio_male"> Male</string>
    <string name="radio_female"> Female </string>
    <string name="hangout_btn"> HangOut </string>
    <string name="dayuse_btn"> DayUse </string>
    <string name="travel_btn"> Travel </string>
    <string name="app_name_nav"> BINNA </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">Mohamed225</string>
    <string name="nav_header_usermail">Mohamed225@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="booked_places_nav_slider">Booked Places</string>
    <string name="uploaded_images">Uploaded Images</string>
    <string name="vouchers">Vouchers</string>
    <string name="notifications">Notifications</string>
    <string name="get_help">Get help</string>
    <string name="about_nav_slider">About Us</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="Profile_icon">Profile</string>
    <string name="Signout_icon">SignOut</string>
    <string name="menu_bookedplaces">Booked Places</string>
    <string name="menu_uploadedimages">Uploaded Images</string>
    <string name="menu_vouchers">Vouchers</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_gethelp">Get help</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_signout">SignOut</string>
    <string name="Restaurants_text_view">Restaurants</string>
    <string name="Restaurants_image_description">Restaurants</string>
    <string name="Cafes_image_description">Cafes</string>
    <string name="Cafes_text_view">Cafes</string>
    <string name="Parks_images_description">Parks</string>
    <string name="Parks_text_view">Parks</string>
    <string name="Historical_Places_images_description"> Historical Places</string>
    <string name="Amusement_Parks_text_view">Amusement Parks </string>
    <string name="Historical_text_view">Historical Places</string>
    <string name="profile_text_view">Profile</string>
    <string name="white_arrow_description">white arrow</string>
    <string name="hangout_text_view"> HangOut </string>
    <string name="kfc_text_view"> KFC </string>
    <string name="mac_text_view"> MacDonalds </string>
    <string name="hardees_text_view"> Hardees </string>
    <string name="burgerking_text_view"> Burger King </string>
    <string name="kfc_description"> KFC is an American fast food restaurant , Kentucky, that specializes in fried chicken </string>
    <string name="book_now_text"> Book Now </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="select_your_interest">select your interest</string>
    <string name="prefrence">Prefrences</string>
    <string name="going_out_with">Going out with</string>
    <string name="indoor_place">Indoor places</string>
    <string name="outdoor_place">Outdoor places</string>
    <string name="both">Both</string>
    <string name="couple">Couple</string>
    <string name="friends">Friends</string>
    <string name="family">Family</string>
    <string name="alone">Alone</string>
    <string name="others">Others</string>
    <string name="button">Button</string>
    <string name="statues">statues</string>
    <string name="married">Married</string>
    <string name="Single">Single</string>
    <string name="Engaged">Engaged</string>
    <string name="places_you_prefer">Places you prefer</string>
    <string name="amusment_park">Amusment park</string>
    <string name="parks">Parks</string>
    <string name="historical_places">Historical Places</string>
    <string name="restaurant">Restaurant</string>
    <string name="hotels">Hotels</string>
    <string name="cafe">Cafe</string>
    <string name="art">Art</string>
    <string name="creativity">creativity</string>
    <string name="dancing">Dancing</string>
    <string name="craft">Craft</string>
    <string name="singing">Singing</string>
    <string name="photography">Photography</string>
    <string name="making_videos">Making videos</string>
    <string name="sports">Sports</string>
    <string name="basketball">Basketball</string>
    <string name="football">Football</string>
    <string name="next">Next</string>
    <string name="bowling">Bowling</string>
    <string name="boating">Boating</string>
    <string name="athletics">Athletics</string>
    <string name="gymanistic">Gymanistic</string>
    <string name="badminton">Badminton</string>
    <string name="swimming">Swimming</string>
    <string name="boxing">Boxing</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="cafe_and_restaurant">Cafe and Restaurant</string>
    <string name="browse_by_categories">Browse by categories</string>
    <string name="amusment_park2">Amusment park</string>
    <string name="historical_places2">Historical places</string>
    <string name="hotels2">Hotels</string>
    <string name="search">search_view</string>
    <string name="search_subtit">search</string>
    <string name="search_subtitle">Search</string>
    <string name="submit2">submit</string>
    <string name="ratingbar">ratingbar</string>
    <string name="rate">Rate</string>
    <string name="fatema_ahmed">Fatema ahmed</string>
    <string name="todoo">TODO</string>
    <string name="todooo">TODO</string>
    <string name="todoooo">tooooo</string>
    <string name="fatema_91420_cic_cairo_com">fatema_91420@cic-cairo.com</string>
    <string name="favouritee">Favourite</string>
    <string name="points">Points</string>
    <string name="uploaded_images1">Uploaded images</string>
    <string name="logout">Logout</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="prefrencess">Prefrences</string>
    <string name="park">Parks</string>
    <string name="hotelss">Hotels</string>
    <string name="restaurant2">Restaurant</string>
    <string name="cafes">cafes</string>
    <string name="places_you_prefer2">places you prefer</string>
    <string name="edit_profile">Edit profile</string>
    <string name="username">username</string>
    <string name="Address">Address</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile number</string>
    <string name="interests">Interests</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="Save_changes">Save changes</string>
</resources>