<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.binnaa.popup_filter">


    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view_with_border"
        android:layout_width="373dp"
        android:layout_height="548dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="33dp"
        app:cardElevation="20dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/prefrencess"
            android:textColor="#000000"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/indooor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/indoor"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/outdoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:text="@string/outdoor"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/places_you_prefer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/places_you_prefer2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/cafes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/cafes"
            android:textColor="#000000"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/Parks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="180dp"
            android:text="@string/park"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/hotels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="210dp"
            android:text="@string/hotelss"
            android:textColor="#000000"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/Restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="240dp"
            android:text="@string/restaurant2"
            android:textColor="#000000"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/historical_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="270dp"
            android:text="@string/historical_places"
            android:textColor="#000000"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/amusment_park"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:text="@string/amusment_park"
            android:textColor="#000000"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>