<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.binnaa.profile">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="653dp"
            android:layout_height="334dp"
            app:srcCompat="@drawable/button_background_orange"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-144dp"
            tools:layout_editor_absoluteY="-131dp"
            android:contentDescription="@string/todoo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="152dp"
        android:layout_height="163dp"
        android:contentDescription="@string/todooo"
        app:srcCompat="@drawable/profile"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="100dp" />

    <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/circles"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="-31dp"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/todoooo" />

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="135dp"
            android:layout_height="21dp"
            android:text="@string/fatema_ahmed"
            android:textColor="#000000"
            android:textColorHint="#070101"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="226dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/fatema_91420_cic_cairo_com"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_text" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="358dp"
        android:layout_height="375dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_orange_ground"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploaded_images"
            app:layout_constraintVertical_bias="0.796" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/points"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_orange_ground"
            android:text="@string/points"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favourite"
            app:layout_constraintVertical_bias="0.129"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uploaded_images"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_orange_ground"
            android:text="@string/uploaded_images1"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_info"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/favourite"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_orange_ground"
            android:text="@string/favouritee"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploaded_images"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/personal_info"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_orange_ground"
            android:text="@string/Edit_profile"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>